--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -50,20 +50,14 @@ section#inbrief-section
         [Take my resume](https://drive.google.com/file/d/1_Dix3-mAHaPVNEB2xIZeZ9RMkZRJ0A8O/view?usp=sharing)
 
 div#iteach-section(style="--section-color: var(--red)")
-  section
-    .section__summary
-      h2.numbered I teach.
-      p In brief...
-      ul
-        li Learning web dev sucks and I want to help
-        li Co-authored fullstack bootcamp with in-person workshops
-        li Became Top 500 author on DEV.to in 2019
-
+  section.section__summary
+    h2.numbered I teach.
     div
-      :markdown-it(html=true)
-        Let's be honest, picking up web development ain't easy. I spent years banging my head against Codecademy tutorials and W3schools to vertically center a div (and the top Stack Overflow answer is still wrong 😑). What's even worse is how disconnected university CS curricula ends up feeling compared to _practical_ web development concepts.
-
-        So, I got tired of sitting in silence. I started a blog back in 2019 as a place to paste some concepts and snippets I learned into a public resource. This somehow made me a Top 500 author on DEV.to, which motivated me to get more involved as a web dev teacher at Georgia Tech. Now, I have **<span id="post-count">10</span>** posts to my name and an entire curriculum of full stack fundamentals!
+      p In brief...
+      :markdown-it
+        - Learning web dev is confusing / ever-changing and I want to help
+        - Top 500 author on DEV (thx readers!)
+        - Built a fullstack bootcamp with online resources + in-person workshops
 
   section.subsection
     h3.subsection__header I blog a lot.
@@ -98,24 +92,16 @@ div#iteach-section(style="--section-color: var(--red)")
         We've been teaching this material at the [Bits of Good student org](https://bitsofgood.org) for 2 semesters now, so we've had a lot of time to work out the kinks. Click through to find our videos, resources, and project templates 100% free! A huge thanks to Andre Hijouay for creating the incredible v1 of the bootcamp, Max Karpawich for our lovely backend materials, and James Wang for contributing + teaching 😁
 
 div#icreate-section(style="--section-color: var(--purple)")
-  section
-    .section__summary
-      h2.numbered I create.
-      p In brief...
-      ul
-        li Learning web dev sucks and I want to help
-        li Co-authored fullstack bootcamp with in-person workshops
-        li Became Top 500 author on DEV.to in 2019
-
+  section.section__summary
+    h2.numbered I create.
     div
-      :markdown-it(html=true)
-        Let's be honest, picking up web development ain't easy. I spent years banging my head against Codecademy tutorials and W3schools to vertically center a div (and the top Stack Overflow answer is still wrong 😑). What's even worse is how disconnected university CS curricula ends up feeling compared to _practical_ web development concepts.
-
-        So, I got tired of sitting in silence. I started a blog back in 2019 as a place to paste some concepts and snippets I learned into a public resource. This somehow made me a Top 500 author on DEV.to, which motivated me to get more involved as a web dev teacher at Georgia Tech. Now, I have **<span id="post-count">10</span>** posts to my name and an entire curriculum of full stack fundamentals!
+      p In brief...
+      :markdown-it
+        - Full-time frontend dev at **Peloton**
+        - Framework-agnostic web developer, currently hyped for **SvelteJS**
+        - Social good advocate: former **Bits of Good** Director of Engineering, **Impact Labs** contributor
 
   section.subsection
-    h3.subsection__header I build cool things.
-
     div.projects__macintosh
       img(src="/static/macintosh.svg" alt="")
       .img-container
