--- a/src/routes/me/styles.scss
+++ b/src/routes/me/styles.scss
@@ -422,7 +422,7 @@
       column-gap: 20px;
       color: var(--body-color);
       text-decoration: none;
-      margin-bottom: 40px;
+      margin-bottom: 60px;
 
       .title {
         grid-area: title;
@@ -474,6 +474,12 @@
       font-size: 36px;
       font-weight: 600;
       color: var(--body-color);
+    }
+
+    .img-link__img-container > img {
+      height: 350px;
+      object-fit: cover;
+      object-position: left;
     }
 
     .min-read {
