--- a/src/routes/me/styles.scss
+++ b/src/routes/me/styles.scss
@@ -1,4 +1,6 @@
 [data-route='index'] {
+  $tablet-breakpoint: 1200px;
+
   .icon-before:before,
   .icon-after:after {
     --icon-size: 1.5em;
@@ -38,6 +40,12 @@
     top: 0;
     display: flex;
     justify-content: center;
+
+    @media (max-width: $tablet-breakpoint) {
+      justify-content: flex-start;
+      margin-left: 20px;
+      margin-top: -200px;
+    }
 
     #line-accents {
       display: flex;
@@ -93,6 +101,22 @@
     align-content: center;
     align-items: center;
 
+    @media (max-width: $tablet-breakpoint) {
+      max-width: 1200px;
+      column-gap: 110px;
+      .content {
+        font-size: 36px;
+
+        a {
+          font-size: 30px;
+        }
+      }
+
+      h1 {
+        font-size: 80px;
+      }
+    }
+
     img {
       width: calc(100% + 100px);
       height: auto;
@@ -133,42 +157,6 @@
     column-gap: 200px;
   }
 
-  @media (max-width: 1200px) {
-    --content-max-width: 800px;
-
-    h2 {
-      font-size: 100px;
-    }
-
-    section:not(#header-section) {
-      grid-template-columns: 1fr;
-      row-gap: 50px;
-      margin-right: auto;
-
-      h3 {
-        grid-column: 1;
-      }
-
-      &.section__summary > div {
-        margin-top: 0;
-      }
-
-      .img-link {
-        max-width: 600px;
-      }
-    }
-
-    section#header-section {
-      max-width: 1200px;
-    }
-
-    .line-accents-container {
-      justify-content: flex-start;
-      margin-left: 20px;
-      margin-top: -200px;
-    }
-  }
-
   #inbrief-section {
     .social-links {
       > a,
@@ -204,6 +192,10 @@
       font-size: 36px;
       cursor: pointer;
       margin-bottom: 20px;
+
+      @media (min-width: $tablet-breakpoint) and (max-width: 1450px) {
+        font-size: 29px;
+      }
 
       .slider {
         position: relative;
@@ -547,346 +539,479 @@
       transform: translateY(10px);
     }
   }
-}
 
-.projects__macintosh {
-  justify-self: end;
-  align-self: end;
-  max-width: 400px;
-  margin-top: 50px;
-  position: relative;
+  #icreate-section > .subsection {
+    grid-template-areas:
+      'macintosh title'
+      'macintosh body'
+      'macintosh links';
 
-  img {
-    width: 100%;
+    @media (max-width: $tablet-breakpoint) {
+      grid-template-areas:
+        'macintosh switch title'
+        'macintosh switch body'
+        'links switch body';
+      grid-template-columns: 80% 20% 80%;
+      column-gap: 25px;
+      row-gap: 0;
+      overflow: hidden;
+
+      * {
+        transition: transform 0.2s;
+      }
+    }
   }
-  .img-container {
-    position: absolute;
-    top: 11.5%;
-    // bottom: -10px;
-    left: 11%;
-    width: 78%;
-    overflow: hidden;
+
+  #projects-title {
+    grid-area: title;
+  }
+
+  #projects-body {
+    grid-area: body;
+  }
+
+  .projects__macintosh {
+    grid-area: macintosh;
+    justify-self: end;
+    align-self: end;
+    max-width: 400px;
+    margin-top: 50px;
+    position: relative;
+    z-index: -1;
+
+    @media (max-width: $tablet-breakpoint) {
+      justify-self: start;
+    }
 
     img {
-      opacity: 0;
-      transform-origin: bottom center;
+      width: 100%;
     }
-
-    img.visible {
-      animation: macintosh-image-glitch-in 0.4s step-start forwards;
-    }
-
-    #projects-img-2 {
+    .img-container {
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      top: 11.5%;
+      // bottom: -10px;
+      left: 11%;
+      width: 78%;
+      overflow: hidden;
+
+      img {
+        opacity: 0;
+        transform-origin: bottom center;
+      }
+
+      img.visible {
+        animation: macintosh-image-glitch-in 0.4s step-start forwards;
+      }
+
+      #projects-img-2 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        animation: macintosh-scan-line 4s linear infinite;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: radial-gradient(transparent 0%, rgba(49, 25, 2, 0.2)),
+          linear-gradient(transparent, rgba(0, 0, 0, 0.05)) repeat;
+        background-size: 100% 100%, 100% 1%;
+      }
     }
+  }
+
+  @keyframes macintosh-scan-line {
+    from {
+      top: 0%;
+      opacity: 1;
+    }
+    to {
+      top: 100%;
+      opacity: 0.1;
+    }
+  }
+
+  @keyframes macintosh-image-glitch-in {
+    0% {
+      transform: skew(0) scaleX(1);
+      opacity: 0;
+    }
+    20%,
+    90% {
+      transform: skew(-10deg) scaleX(1.5);
+      opacity: 1;
+    }
+    30% {
+      transform: translateX(10px) skew(-10deg) scaleX(1.5);
+      opacity: 1;
+    }
+    100% {
+      transform: skew(0) scaleX(1);
+      opacity: 1;
+    }
+  }
+
+  #project-details-toggle {
+    position: absolute;
+    width: 0;
+    height: 0;
+
+    @media (max-width: $tablet-breakpoint) {
+      &:checked {
+        ~ * {
+          transform: translateX(-550px);
+
+          @media (max-width: 800px) {
+            transform: translateX(-70vw);
+          }
+        }
+
+        ~ label {
+          &::before {
+            content: 'Other projects';
+          }
+          &::after {
+            transform: rotate(180deg);
+          }
+        }
+      }
+    }
+  }
+
+  label[for='project-details-toggle'] {
+    @media (min-width: $tablet-breakpoint) {
+      display: none;
+    }
+
+    grid-area: switch;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    writing-mode: vertical-rl;
+    font-size: 48px;
+    font-family: var(--header-font);
+    transition: opacity 0.2s, transform 0.2s;
 
     &::before {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background: rgba(0, 0, 0, 0.2);
-      z-index: 1;
-      animation: macintosh-scan-line 4s linear infinite;
+      content: 'About project';
     }
 
     &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: radial-gradient(transparent 0%, rgba(49, 25, 2, 0.2)),
-        linear-gradient(transparent, rgba(0, 0, 0, 0.05)) repeat;
-      background-size: 100% 100%, 100% 1%;
+      margin-top: 30px;
+      transition: transform 0.2s;
+      --icon-size: 1em;
+      --icon-color: var(--body-color);
+    }
+
+    &:hover {
+      opacity: 0.5;
     }
   }
-}
 
-@keyframes macintosh-scan-line {
-  from {
-    top: 0%;
-    opacity: 1;
-  }
-  to {
-    top: 100%;
-    opacity: 0.1;
-  }
-}
-
-@keyframes macintosh-image-glitch-in {
-  0% {
-    transform: skew(0) scaleX(1);
-    opacity: 0;
-  }
-  20%,
-  90% {
-    transform: skew(-10deg) scaleX(1.5);
-    opacity: 1;
-  }
-  30% {
-    transform: translateX(10px) skew(-10deg) scaleX(1.5);
-    opacity: 1;
-  }
-  100% {
-    transform: skew(0) scaleX(1);
-    opacity: 1;
-  }
-}
-
-.projects__link-container {
-  margin-top: 80px;
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  justify-items: start;
-
-  a,
-  button {
-    cursor: pointer;
-  }
-
-  #generate-random-project {
-    padding-right: 20px;
+  .projects__link-container {
+    grid-area: links;
+    margin-top: 80px;
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    justify-items: start;
     font-size: 30px;
-    margin-top: 0;
-    margin-bottom: 20px;
-  }
 
-  a {
-    font-family: var(--header-font);
-    text-decoration: none;
-    font-size: 20px;
-
-    &::after {
-      margin-left: 10px;
+    @media (max-width: $tablet-breakpoint) {
+      margin-top: -60px;
+      font-size: 26px;
     }
-  }
 
-  #dice-container {
-    grid-row: 1 / span 2;
-    position: relative;
-    height: 100px;
+    a,
+    button {
+      cursor: pointer;
+    }
 
-    &.animated {
-      --anim-length: 2.5s;
-      .outer-wrapper {
-        animation: dice-bounce-outer var(--anim-length) linear forwards;
+    #generate-random-project {
+      padding-right: 20px;
+      font-size: inherit;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
 
-        .inner-wrapper {
-          animation: dice-bounce-inner var(--anim-length) ease-in forwards;
+    a {
+      font-family: var(--header-font);
+      text-decoration: none;
+      font-size: 20px;
 
-          img {
-            animation: dice-spin var(--anim-length) linear forwards;
-          }
-          &::before {
-            animation: dice-spin var(--anim-length) linear forwards,
-              dice-spin-offset var(--anim-length) ease-out forwards;
+      &::after {
+        margin-left: 10px;
+      }
+    }
+
+    #dice-container {
+      grid-row: 1 / span 2;
+      position: relative;
+      height: 100px;
+
+      &.animated {
+        --anim-length: 2.5s;
+        .outer-wrapper {
+          animation: dice-bounce-outer var(--anim-length) linear forwards;
+
+          .inner-wrapper {
+            animation: dice-bounce-inner var(--anim-length) ease-in forwards;
+
+            img {
+              animation: dice-spin var(--anim-length) linear forwards;
+            }
+            &::before {
+              animation: dice-spin var(--anim-length) linear forwards,
+                dice-spin-offset var(--anim-length) ease-out forwards;
+            }
           }
         }
-      }
 
-      .outer-wrapper.delayed {
-        --delay: 0.3s;
-        animation-name: dice-bounce-outer-delayed;
-        animation-delay: var(--delay);
-
-        .inner-wrapper {
-          animation-name: dice-bounce-inner-delayed;
+        .outer-wrapper.delayed {
+          --delay: 0.3s;
+          animation-name: dice-bounce-outer-delayed;
           animation-delay: var(--delay);
 
-          &::before,
-          img {
-            animation-name: dice-spin-delayed;
+          .inner-wrapper {
+            animation-name: dice-bounce-inner-delayed;
             animation-delay: var(--delay);
+
+            &::before,
+            img {
+              animation-name: dice-spin-delayed;
+              animation-delay: var(--delay);
+            }
+          }
+        }
+
+        @media (max-width: $tablet-breakpoint) {
+          .outer-wrapper,
+          .outer-wrapper.delayed {
+            animation-name: none;
           }
         }
       }
-    }
 
-    .outer-wrapper {
-      --delay: 0s;
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100px;
+      .outer-wrapper {
+        --delay: 0s;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100px;
 
-      &.delayed {
-        transform: translateX(-25px);
+        &.delayed {
+          transform: translateX(-25px);
+
+          .inner-wrapper {
+            transform: translateY(-38px);
+
+            &::before {
+              left: 6px;
+            }
+          }
+        }
 
         .inner-wrapper {
-          transform: translateY(-38px);
+          height: 40px;
+          width: 40px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
 
           &::before {
-            left: 6px;
+            content: '';
+            position: absolute;
+            z-index: -1;
+            top: -6px;
+            left: -6px;
+            width: 100%;
+            height: 100%;
+            background: #faf1d8;
+            outline: 3px solid #7931e3;
+            outline-offset: -3px;
           }
-        }
-      }
-
-      .inner-wrapper {
-        height: 40px;
-        width: 40px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-
-        img {
-          width: 100%;
-          height: 100%;
-        }
-
-        &::before {
-          content: '';
-          position: absolute;
-          z-index: -1;
-          top: -6px;
-          left: -6px;
-          width: 100%;
-          height: 100%;
-          background: #faf1d8;
-          outline: 3px solid #7931e3;
-          outline-offset: -3px;
         }
       }
     }
   }
-}
 
-@keyframes dice-bounce-outer {
-  0%,
-  80%,
-  100% {
-    transform: translateX(0);
+  @keyframes dice-bounce-outer {
+    0%,
+    80%,
+    100% {
+      transform: translateX(0);
+    }
+    15% {
+      transform: translateX(-200px);
+      animation-timing-function: cubic-bezier(0, 0, 0.74, 0.98);
+    }
+    70% {
+      transform: translateX(-10px);
+      animation-timing-function: ease-out;
+    }
   }
-  15% {
-    transform: translateX(-200px);
-    animation-timing-function: cubic-bezier(0, 0, 0.74, 0.98);
-  }
-  70% {
-    transform: translateX(-10px);
-    animation-timing-function: ease-out;
-  }
-}
 
-@keyframes dice-bounce-outer-delayed {
-  0%,
-  75%,
-  100% {
-    transform: translateX(-25px);
+  @keyframes dice-bounce-outer-delayed {
+    0%,
+    75%,
+    100% {
+      transform: translateX(-25px);
+    }
+    15% {
+      transform: translateX(-200px);
+      animation-timing-function: cubic-bezier(0, 0, 0.74, 0.98);
+    }
+    65% {
+      transform: translateX(-10px);
+      animation-timing-function: ease-out;
+    }
   }
-  15% {
-    transform: translateX(-200px);
-    animation-timing-function: cubic-bezier(0, 0, 0.74, 0.98);
-  }
-  65% {
-    transform: translateX(-10px);
-    animation-timing-function: ease-out;
-  }
-}
 
-@keyframes dice-bounce-inner {
-  0%,
-  80%,
-  100% {
-    transform: translateY(0);
+  @keyframes dice-bounce-inner {
+    0%,
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+    25%,
+    45%,
+    65% {
+      transform: translateY(-5px);
+      animation-timing-function: ease-out;
+    }
+    15% {
+      transform: translateY(-80px);
+    }
+    35% {
+      transform: translateY(-70px);
+    }
+    55% {
+      transform: translateY(-30px);
+    }
   }
-  25%,
-  45%,
-  65% {
-    transform: translateY(-5px);
-    animation-timing-function: ease-out;
-  }
-  15% {
-    transform: translateY(-80px);
-  }
-  35% {
-    transform: translateY(-70px);
-  }
-  55% {
-    transform: translateY(-30px);
-  }
-}
 
-@keyframes dice-bounce-inner-delayed {
-  0%,
-  75%,
-  100% {
-    transform: translateY(-38px);
+  @keyframes dice-bounce-inner-delayed {
+    0%,
+    75%,
+    100% {
+      transform: translateY(-38px);
+    }
+    20%,
+    50% {
+      transform: translateY(-5px);
+      animation-timing-function: ease-out;
+    }
+    10% {
+      transform: translateY(-100px);
+    }
+    35% {
+      transform: translateY(-80px);
+    }
+    65% {
+      transform: translateY(-35px);
+    }
   }
-  20%,
-  50% {
-    transform: translateY(-5px);
-    animation-timing-function: ease-out;
-  }
-  10% {
-    transform: translateY(-100px);
-  }
-  35% {
-    transform: translateY(-80px);
-  }
-  65% {
-    transform: translateY(-35px);
-  }
-}
 
-@keyframes dice-spin {
-  15% {
-    transform: rotate(-200deg);
+  @keyframes dice-spin {
+    15% {
+      transform: rotate(-200deg);
+    }
+    45% {
+      transform: rotate(150deg);
+    }
+    70% {
+      transform: rotate(380deg);
+      animation-timing-function: ease-in;
+    }
+    80%,
+    100% {
+      transform: rotate(360deg);
+    }
   }
-  45% {
-    transform: rotate(150deg);
-  }
-  70% {
-    transform: rotate(380deg);
-    animation-timing-function: ease-in;
-  }
-  80%,
-  100% {
-    transform: rotate(360deg);
-  }
-}
 
-@keyframes dice-spin-delayed {
-  15% {
-    transform: rotate(-200deg);
+  @keyframes dice-spin-delayed {
+    15% {
+      transform: rotate(-200deg);
+    }
+    45% {
+      transform: rotate(250deg);
+    }
+    65% {
+      transform: rotate(370deg);
+      animation-timing-function: ease-in;
+    }
+    75%,
+    100% {
+      transform: rotate(360deg);
+    }
   }
-  45% {
-    transform: rotate(250deg);
-  }
-  65% {
-    transform: rotate(370deg);
-    animation-timing-function: ease-in;
-  }
-  75%,
-  100% {
-    transform: rotate(360deg);
-  }
-}
 
-@keyframes dice-spin-offset {
-  15%,
-  25%,
-  45%,
-  65% {
-    top: 6px;
-    left: -6px;
+  @keyframes dice-spin-offset {
+    15%,
+    25%,
+    45%,
+    65% {
+      top: 6px;
+      left: -6px;
+    }
+    35%,
+    55%,
+    75%,
+    100% {
+      top: -6px;
+      left: -6px;
+    }
   }
-  35%,
-  55%,
-  75%,
-  100% {
-    top: -6px;
-    left: -6px;
-  }
-}
 
-@media (max-width: 1350px) {
-  h2 {
-    font-size: 80px;
+  @media (max-width: 1350px) {
+    h2 {
+      font-size: 80px;
+    }
+  }
+
+  @media (max-width: $tablet-breakpoint) {
+    --content-max-width: 700px;
+
+    h2 {
+      font-size: 100px;
+    }
+
+    section:not(#header-section) {
+      grid-template-columns: 1fr;
+      row-gap: 50px;
+      margin-right: auto;
+
+      h3 {
+        grid-column: 1;
+      }
+
+      &.section__summary > div {
+        margin-top: 0;
+      }
+
+      .img-link {
+        max-width: 600px;
+      }
+    }
   }
 }
