remove pointer events from all button child nodes

--- a/src/routes/_layout/global.scss
+++ b/src/routes/_layout/global.scss
@@ -104,6 +104,10 @@ button {
   font-family: var(--header-font);
   color: var(--body-color);
   cursor: pointer;
+
+  * {
+    pointer-events: none;
+  }
 }
 
 [data-route] {
