--- a/src/routes/_layout/navStyles.scss
+++ b/src/routes/_layout/navStyles.scss
@@ -1,4 +1,4 @@
-#primary-nav {
+nav {
   writing-mode: vertical-rl;
   background: var(--bg-color);
   z-index: 9;
@@ -8,17 +8,13 @@
   height: 100vh;
   top: 0;
   right: 0;
+  font-family: var(--header-font);
 
   a,
   a:visited {
     color: var(--body-color);
     margin: 50px 30px;
-    opacity: 0.5;
     text-decoration: none;
-  }
-
-  a.active {
-    opacity: 1;
   }
 
   ul {
@@ -26,8 +22,12 @@
     display: flex;
     align-items: center;
     font-size: 30px;
-    font-family: var(--header-font);
     font-weight: bold;
+  }
+
+  #jump-to-sections > .heading {
+    font-weight: normal;
+    font-size: 24px;
   }
 
   #dashed-line-container {
@@ -58,37 +58,73 @@
     }
   }
 
-  #mobile-dropdown-toggle {
-    display: none;
+  #primary-nav {
+    li {
+      opacity: 0.5;
+    }
+    li.active {
+      opacity: 1;
+    }
+  }
+
+  @media (min-width: 875px) {
+    .mobile {
+      display: none;
+    }
   }
 
   @media (max-width: 875px) {
-    --nav-height: 50px;
+    --nav-height: 60px;
     writing-mode: initial;
     left: 0;
     width: 100vw;
     height: var(--nav-height);
     display: flex;
     align-items: center;
-    padding: 0 30px;
     border-bottom: 2px solid var(--bg-color-2);
 
     #dashed-line-container {
       display: none;
     }
 
-    #mobile-dropdown-toggle {
+    #jump-to-section-toggle {
+      font-size: 24px;
+      transition: background-position-y 0.3s;
+      background: linear-gradient(
+        var(--green) 33.33%,
+        var(--red) 33.33%,
+        var(--red) 66.67%,
+        var(--purple) 66.67%
+      );
+      background-size: 100% 300%;
+      margin-right: 30px;
+
+      height: 100%;
+      padding: 0 20px;
+      color: var(--bg-color);
+      font-weight: bold;
+
+      svg {
+        margin-left: 5px;
+        width: 30px;
+        vertical-align: middle;
+        fill: var(--bg-color);
+      }
+    }
+
+    #primary-nav-toggle {
       height: 24px;
       width: 30px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       padding: 0;
+      margin-left: auto;
+      margin-right: 30px;
 
       * {
         border-bottom: 4px solid var(--body-color);
         transition: transform 0.2s, opacity 0.2s;
-        pointer-events: none;
       }
 
       .stripe-top {
@@ -106,7 +142,10 @@
       left: 0;
       right: 0;
       height: 0; /* hide until mobile nav toggled */
-      display: block;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: stretch;
       overflow: hidden;
       background: var(--bg-color);
       transition: height 0.3s, opacity 0.4s;
@@ -114,7 +153,6 @@
       font-size: 36px;
 
       li {
-        width: 100%;
         margin: 30px;
         margin-left: 0;
       }
@@ -125,12 +163,16 @@
       }
     }
 
-    &.toggled {
-      ul {
-        height: 100vh;
+    #primary-nav {
+      a {
+        text-align: end;
       }
+    }
 
-      #mobile-dropdown-toggle {
+    #primary-nav.toggled {
+      height: 100vh;
+
+      ~ #primary-nav-toggle {
         .stripe-top {
           transform: rotate(-45deg);
         }
@@ -141,6 +183,10 @@
           transform: scaleX(0);
         }
       }
+    }
+
+    #jump-to-sections.toggled {
+      height: 100vh;
     }
   }
 }
