fix "more about me" link on homepage

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -9,7 +9,7 @@ section#header-section
       li Blogger
       li Charcoal fan
 
-    a.icon-after.icon__arrow-down(href="#iteach") More about me
+    a.icon-after.icon__arrow-down(href="#inbrief-section") More about me
 
 .line-accents-container
   #line-accents
