--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -9,7 +9,8 @@ section#header-section
       li Blogger
       li Charcoal fan
 
-    a.icon-after.icon__arrow-down(href="#inbrief-section") More about me
+    a.icon-after.icon__arrow-down(href="#inbrief-section") 
+      span More about me
 
 .line-accents-container
   #line-accents
