--- a/src/routes/me/styles.scss
+++ b/src/routes/me/styles.scss
@@ -529,6 +529,12 @@
     flex-direction: column;
     justify-content: space-between;
 
+    @media (min-width: $tablet-breakpoint) {
+      &.headline-mobile-version {
+        display: none;
+      }
+    }
+
     .blog-post,
     .blog-post:visited {
       position: relative;
@@ -600,6 +606,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @media (max-width: $tablet-breakpoint) {
+      display: none;
+    }
 
     .title {
       font-size: 36px;
