--- a/src/routes/_layout/navStyles.scss
+++ b/src/routes/_layout/navStyles.scss
@@ -117,6 +117,7 @@ nav {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: stretch;
       padding: 0;
       margin-left: auto;
       margin-right: 30px;
