fix header section sizing and flashing arrow on safari

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -9,8 +9,9 @@ section#header-section
       li Blogger
       li Charcoal fan
 
-    a.icon-after.icon__arrow-down(href="#inbrief-section") 
+    a(href="#inbrief-section") 
       span More about me
+      img(src="/static/icons/arrow-down.svg" alt="")
 
 .line-accents-container
   #line-accents
