add 4 new projects + animated gifs

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -113,7 +113,7 @@ div#icreate-section(style="--section-color: var(--purple)")
     .projects__macintosh
       img(src="/static/macintosh.svg" alt="")
       .img-container
-        img#projects-img-1.screenshot.visible(src=firstProject.img.src alt=firstProject.img.alt)
+        img#projects-img-1.screenshot.visible(src=firstProject.img.gifSrc alt=firstProject.img.alt)
         img#projects-img-2.screenshot
     
     label.icon-after.icon__arrow-right(for="project-details-toggle")
