--- a/src/routes/me/styles.scss
+++ b/src/routes/me/styles.scss
@@ -729,6 +729,7 @@
       img {
         opacity: 0;
         transform-origin: bottom center;
+        background: #333;
       }
 
       img.visible {
