fix headline blog post displaying twice on desktop

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -73,7 +73,7 @@ div#iteach-section(style="--section-color: var(--red)")
       p.cta-link.icon-after.icon__arrow-right Get to reading
     .blog-post__container
       dl.blog-post__list
-        a.blog-post.headline-mobile-verson(href=headline.url)
+        a.blog-post.headline-mobile-version(href=headline.url)
             img.mug(src=headline.minReadIcon.src alt=headline.minReadIcon.alt)
             dd.min-read #{headline.minRead} min
             dt.title #{headline.title}
