--- a/src/routes/_layout/global.scss
+++ b/src/routes/_layout/global.scss
@@ -112,7 +112,8 @@ a:hover {
   .img-link__img-container {
     position: relative;
 
-    > img {
+    > img,
+    > video {
       width: 100%;
       transition: transform 0.5s;
     }
@@ -140,7 +141,8 @@ a:hover {
     }
   }
   &:hover > .img-link__img-container {
-    > img {
+    > img,
+    .media {
       transform: translate(20px, -20px);
     }
     &::after {
