--- a/src/routes/projects/styles.scss
+++ b/src/routes/projects/styles.scss
@@ -2,6 +2,19 @@
   $small-desktop-breakpoint: 1350px;
   $tablet-breakpoint: 1200px;
 
+  .tag {
+    &:first-of-type {
+      background: var(--section-color);
+      color: var(--bg-color);
+    }
+
+    display: inline-block;
+    font-family: var(--header-font);
+    background: var(--bg-color-2);
+    padding: 10px;
+    margin-right: 20px;
+  }
+
   section {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -30,7 +43,9 @@
 
     .project__headline,
     .project__small {
-      text-align: left;
+      * {
+        pointer-events: none;
+      }
 
       img,
       video {
@@ -43,18 +58,6 @@
 
       .timeframe {
         font-family: var(--header-font);
-      }
-
-      .tag {
-        &:first-of-type {
-          background: var(--section-color);
-          color: var(--bg-color);
-        }
-
-        font-family: var(--header-font);
-        background: var(--bg-color-2);
-        padding: 10px;
-        margin-right: 20px;
       }
     }
 
@@ -138,6 +141,50 @@
 
     @media (max-width: $tablet-breakpoint) {
       --content-max-width: 700px;
+    }
+  }
+
+  #details-slide-out {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    .background,
+    article {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 1000px;
+      max-width: 100vw;
+      transform: translateX(-100%);
+      transition: transform 0.3s;
+    }
+
+    .background {
+      background: var(--bg-color);
+      border-right: 5px solid var(--body-color-2);
+      z-index: -1;
+    }
+
+    article {
+      .content {
+        max-width: 700px;
+        width: 100%;
+        margin: auto;
+        padding: 20px;
+
+        h2 {
+          font-size: 44px;
+        }
+      }
+    }
+
+    &:not(.closed) > article {
+      &:target,
+      &:target ~ .background {
+        transform: translateX(0);
+      }
     }
   }
 }
